--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -34,7 +34,7 @@
 
 .socialLink {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   padding: 0.5rem 1rem;
   background-color: none;
   border: 1px solid var(--color-primary);
